--- a/src/ui/components/module-picker.less
+++ b/src/ui/components/module-picker.less
@@ -2,11 +2,28 @@
     width: 400px;
 
     .module-picker-item {
-        padding: 0.75em 1em;
         display: flex;
         gap: 0.5em;
         align-items: center;
         position: relative;
+    }
+
+    .module-picker-category {
+        padding: 0.75em 0.75em;
+        font-size: larger;
+
+        &:not(:last-child)::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            border-bottom: 2px solid var(--separator);
+        }
+    }
+
+    .module-picker-module {
+        padding: 0.75em 1em;
 
         &:not(:last-child)::after {
             content: '';
